# cc

ros_singleQuad/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_singleQuad/devel/include/quadrotor_msgs/: mpc_ref_point.h
ros_singleQuad/devel/lib/multi_map_server/: multi_map_visualization
ros_singleQuad/devel/lib/odom_visualization/: odom_visualization
ros_singleQuad/devel/lib/pkgconfig/: cmake_utils.pc  multi_map_server.pc  odom_visualization.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  traj_tools.pc  uav_utils.pc  xld_control.pc  xld_simulator.pc
ros_singleQuad/devel/lib/traj_tools/: traj_tools_node
ros_singleQuad/devel/lib/xld_simulator/: xld_simulator_node
ros_singleQuad/src/: run_simple_drone.sh
ros_singleQuad/src/Utils/odom_visualization/: CMakeLists.txt
ros_singleQuad/src/Utils/quadrotor_msgs/: CMakeLists.txt
ros_singleQuad/src/traj_tools/: CMakeLists.txt
ros_singleQuad/src/traj_tools/launch/: example1.launch
ros_singleQuad/src/xld_control/: CMakeLists.txt  nodelet_plugin.xml
ros_singleQuad/src/xld_control/c_generated_code/: acados_solver_NMPC_model.c  acados_solver_NMPC_model.h
ros_singleQuad/src/xld_control/c_generated_code/NMPC_model_cost/: NMPC_model_cost_ext_cost_0_fun_jac_hess.c  NMPC_model_cost_ext_cost_e_fun_jac.c  NMPC_model_cost_ext_cost_e_fun_jac_hess.c  NMPC_model_cost_ext_cost_fun_jac_hess.c
ros_singleQuad/src/xld_control/c_generated_code/NMPC_model_model/: NMPC_model_expl_ode_hess.c  NMPC_model_expl_vde_forw.c
ros_singleQuad/src/xld_control/src/: SO3Control.cpp  mpc_wrapper.cpp  xld_control_nodelet.cpp
ros_singleQuad/src/xld_simulator/launch/: simulator.launch
ros_singleQuad/src/xld_simulator/src/: xld_simulator_node.cpp
ros_twoquadsrod/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_twoquadsrod/devel/include/quadrotor_msgs/: SO3Command.h  mpc_ref_traj.h
ros_twoquadsrod/devel/lib/multi_map_server/: multi_map_visualization
ros_twoquadsrod/devel/lib/odom_visualization/: odom_visualization
ros_twoquadsrod/devel/lib/pkgconfig/: cmake_utils.pc  multi_map_server.pc  odom_visualization.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  traj_tools.pc  uav_utils.pc  xld_control.pc  xld_simulator.pc
ros_twoquadsrod/devel/lib/traj_tools/: traj_tools_node
ros_twoquadsrod/devel/lib/xld_simulator/: xld_simulator_node
ros_twoquadsrod/src/: run_simple_drone.sh
ros_twoquadsrod/src/traj_tools/launch/: traj_vis.rviz
ros_twoquadsrod/src/traj_tools/src/: traj_tools_node.cpp
ros_twoquadsrod/src/xld_simulator/: CMakeLists.txt  package.xml
ros_twoquadsrod/src/xld_simulator/config/: rviz.rviz
singleQuad/: acados_ocp.json
singleQuad/c/: CMakeLists.txt
singleQuad/c/src/: NMPC_app.cpp  NMPC_app.h
singleQuad/c_generated_code/: Makefile  acados_sim_solver_NMPC_model.c
singleQuad/c_generated_code/NMPC_model_cost/: NMPC_model_cost.h  NMPC_model_cost_ext_cost_0_fun.c  NMPC_model_cost_ext_cost_e_fun.c  NMPC_model_cost_ext_cost_fun.c
singleQuad/c_generated_code/NMPC_model_model/: NMPC_model_expl_ode_fun.c  NMPC_model_expl_vde_adj.c
singleQuad/python/: acados_ocp.json  myNMPC.py  my_Model.py
singleQuad/python/c_generated_code/: Makefile  acados_sim_solver_NMPC_model.h  acados_solver.pxd  main_NMPC_model.c
twoQuadsRod/: acados_ocp.json  acados_sim.json  all_models.py  main.py  myNMPC.py  my_Model.py  setMhe.py  setOcp.py  setSim.py  test.py
twoQuadsRod/c_generated_code/: Makefile  acados_sim_solver.pxd  acados_sim_solver_NMPC_model.c  acados_sim_solver_NMPC_model.h  acados_sim_solver_dae.c  acados_sim_solver_dae.h  acados_sim_solver_geo.c  acados_sim_solver_geo.h  acados_sim_solver_sihao.c  acados_sim_solver_sihao.h  acados_solver.pxd  acados_solver_NMPC_model.c  acados_solver_NMPC_model.h  acados_solver_dae.c  acados_solver_dae.h  acados_solver_geo.c  acados_solver_geo.h  acados_solver_sihao.c  acados_solver_sihao.h  main_NMPC_model.c  main_dae.c  main_geo.c  main_sihao.c  main_sim_NMPC_model.c  main_sim_dae.c  main_sim_geo.c  main_sim_sihao.c
twoQuadsRod/c_generated_code/NMPC_model_cost/: NMPC_model_cost.h  NMPC_model_cost_y_0_fun.c  NMPC_model_cost_y_0_fun_jac_ut_xt.c  NMPC_model_cost_y_0_hess.c  NMPC_model_cost_y_e_fun.c  NMPC_model_cost_y_e_fun_jac_ut_xt.c  NMPC_model_cost_y_e_hess.c  NMPC_model_cost_y_fun.c  NMPC_model_cost_y_fun_jac_ut_xt.c  NMPC_model_cost_y_hess.c
twoQuadsRod/c_generated_code/NMPC_model_model/: NMPC_model_expl_ode_fun.c  NMPC_model_expl_vde_adj.c  NMPC_model_expl_vde_forw.c  NMPC_model_model.h
twoQuadsRod/c_generated_code/dae_constraints/: dae_constr_h_0_fun.c  dae_constr_h_0_fun_jac_uxt_zt.c  dae_constr_h_e_fun.c  dae_constr_h_e_fun_jac_uxt_zt.c  dae_constr_h_fun.c  dae_constr_h_fun_jac_uxt_zt.c  dae_constraints.h
twoQuadsRod/c_generated_code/dae_cost/: dae_cost.h  dae_cost_y_0_fun.c  dae_cost_y_0_fun_jac_ut_xt.c  dae_cost_y_0_hess.c  dae_cost_y_e_fun.c  dae_cost_y_e_fun_jac_ut_xt.c  dae_cost_y_e_hess.c  dae_cost_y_fun.c  dae_cost_y_fun_jac_ut_xt.c  dae_cost_y_hess.c
twoQuadsRod/c_generated_code/dae_model/: dae_impl_dae_fun.c  dae_impl_dae_fun_jac_x_xdot_u.c  dae_impl_dae_fun_jac_x_xdot_u_z.c  dae_impl_dae_fun_jac_x_xdot_z.c  dae_impl_dae_jac_x_xdot_u_z.c  dae_model.h
twoQuadsRod/c_generated_code/geo_constraints/: geo_constr_h_0_fun.c  geo_constr_h_0_fun_jac_uxt_zt.c  geo_constr_h_fun.c  geo_constr_h_fun_jac_uxt_zt.c  geo_constraints.h
twoQuadsRod/c_generated_code/geo_cost/: geo_cost.h  geo_cost_y_0_fun.c  geo_cost_y_0_fun_jac_ut_xt.c  geo_cost_y_0_hess.c  geo_cost_y_fun.c  geo_cost_y_fun_jac_ut_xt.c  geo_cost_y_hess.c
twoQuadsRod/c_generated_code/geo_model/: geo_expl_ode_fun.c  geo_expl_vde_adj.c  geo_model.h
twoQuadsRod/c_generated_code/sihao_cost/: sihao_cost.h  sihao_cost_y_0_fun.c  sihao_cost_y_0_fun_jac_ut_xt.c  sihao_cost_y_0_hess.c  sihao_cost_y_e_fun.c  sihao_cost_y_e_fun_jac_ut_xt.c  sihao_cost_y_e_hess.c  sihao_cost_y_fun.c  sihao_cost_y_fun_jac_ut_xt.c  sihao_cost_y_hess.c
twoQuadsRod/c_generated_code/sihao_model/: sihao_expl_ode_fun.c  sihao_expl_vde_adj.c  sihao_expl_vde_forw.c  sihao_model.h
(+84 files in other folders)
